Fixed some styling and structural issue. You won't see any extra space on top of the parallax image once you begin scrolling.

--- a/styles/documentStructure.css
+++ b/styles/documentStructure.css
@@ -80,7 +80,8 @@
 
 .headerNav{
 	display: flex;
-	/* position: fixed; */
+	position: fixed;
+	z-index: 2;
 	justify-content: space-around;
 	align-items: center;	
 	width: 100%;
@@ -202,6 +203,6 @@
 }
 
 .footerDivider{
-	height: 8vh;
+	height: 6vh;
 	z-index: 1;
 }
