--- a/styles/pageEffects.css
+++ b/styles/pageEffects.css
@@ -1,6 +1,6 @@
 .stickyNav{
 	position: fixed;
-	opacity: 0.85;
+	opacity: 0.95;
 	top: 0;
 	z-index: 2;
 	transition: opacity 1s;
@@ -33,7 +33,7 @@
 	width: 100vmax;
 	z-index: 0;
 	position: fixed;
-	top: 55px;
+	/* top: 55px; */
 	left: 50%;
 	transform: translate(-50%,0);
 	pointer-events: none
