--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 .primaryBackgroundColor{
 	/* background-color: #FF475F; */
 	background-color: rgba(255, 71, 95, 0.6);
+
 }
 
 .secondaryBackgroundColor{
@@ -54,5 +55,6 @@ a[class*="headerButton"].defaultFlatButton{
 }
 
 .footerDivider{
-	background-color: #A3BCF9;
+	/* background-color: #A3BCF9; */
+	background-color: rgba(163, 188, 249, 0.6)
 }
